# gips

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  gip.sh  gips  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  release_regression.md
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap-ubuntu.sh  build-release.sh  finalize-check.sh  mock-mmdblookup.sh
station/: __init__.py  cli.py  diagnostics.py  geoip.py  intel.py  render.py  runtime.py  shell.py
tests/: test_station.py
tests/fixtures/: GeoLite2-City.mmdb
